--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,24 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lazy_static  = "1.4"
+lazy_static = "1.4"
 
+# actix-web = "1.0"
+
+tokio = "=0.2.0-alpha.6"
+
+quick-xml = "0.17.0"
+
+serde = "*"
+serde_json = "*"
+serde_derive = "*"
+
+snafu = "0.6.0"
+
+heim = "0.0.8"
+heim-common = "0.0.8"
+heim-process = "0.0.8"
+heim-derive = "0.0.8"
+
+futures = "0.3"
+futures-executor = "0.3"
