--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,12 @@ edition = "2018"
 
 [dependencies]
 lazy_static = "1.4"
+pretty_env_logger = "*"
+log = "*"
 
 # actix-web = "1.0"
 
-tokio = "=0.2.0-alpha.6"
+# tokio = "=0.2.0-alpha.6"
 
 quick-xml = "0.17.0"
 
@@ -19,13 +21,14 @@ serde = "*"
 serde_json = "*"
 serde_derive = "*"
 serde_repr = "0.1"
+# serde_any = { version = "0.5", default-features = false, features = ["json"] }
 
 anyhow = "1.0"
 
-heim = "0.0.8"
-heim-common = "0.0.8"
-heim-process = "0.0.8"
-heim-derive = "0.0.8"
+# heim = "0.0.8"
+# heim-common = "0.0.8"
+# heim-process = "0.0.8"
+# heim-derive = "0.0.8"
 
 futures = "0.3"
 futures-executor = "0.3"
