--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ serde = "*"
 serde_json = "*"
 serde_derive = "*"
 serde_repr = "0.1"
-# serde_any = { version = "0.5", default-features = false, features = ["json"] }
+serde_any = { version = "0.5", default-features = false, features = ["json", "yaml"] }
 
 anyhow = "1.0"
 
