--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,13 @@ edition = "2018"
 lazy_static = "1.4"
 pretty_env_logger = "*"
 log = "*"
+clap = "2"
 
 # actix-web = "1.0"
 
 # tokio = "=0.2.0-alpha.6"
 
-quick-xml = "0.17.0"
+quick-xml = "0.17"
 handlebars = "2"
 
 serde = "*"
@@ -24,7 +25,7 @@ serde_derive = "*"
 serde_repr = "0.1"
 serde_any = { version = "0.5", default-features = false, features = ["json", "yaml"] }
 
-anyhow = "1.0"
+anyhow = "1"
 
 # heim = "0.0.8"
 # heim-common = "0.0.8"
