--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,16 +4,15 @@ version = "0.1.0"
 authors = ["Stefan Lendl <ste.lendl@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-lazy_static = "1.4"
+lazy_static = "1"
 pretty_env_logger = "*"
 log = "*"
 clap = "2"
 
-# actix-web = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
 
+# actix-web = "1.0"
 # tokio = "=0.2.0-alpha.6"
 
 quick-xml = "0.17"
