--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,12 @@ serde_any = { version = "0.5", default-features = false, features = ["json", "ya
 
 anyhow = "1"
 
+# plotters = { version = "0.2", features = ["cairo"] }
+gnuplot = "^0.0.32"
+
+diesel = { version = "1.4", features = ["postgres", "chrono", "serde_json"] }
+dotenv = "0.15"
+
 # heim = "0.0.8"
 # heim-common = "0.0.8"
 # heim-process = "0.0.8"
