--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "backtest-run"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Stefan Lendl <ste.lendl@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-lazy_static = "1"
+lazy_static = "1.4"
 # pretty_env_logger = "0.3"
 env_logger = "0.7"
 log = "0.4"
-clap = "2"
+clap = "2.33"
 
 chrono = { version = "0.4", features = ["serde"] }
 
@@ -35,7 +35,7 @@ anyhow = "1.0"
 futures = "0.3"
 futures-executor = "0.3"
 
-actix-web = "2.0.0-rc"
+actix-web = "2.0"
 actix-web-actors = "2.0"
 actix-codec = "0.2"
 actix-files = "0.2"
