--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2018"
 
 [dependencies]
 lazy_static = "1.4"
-# pretty_env_logger = "0.3"
-env_logger = "0.7"
+pretty_env_logger = "0.4"
+# env_logger = "0.7"
 log = "0.4"
 clap = "2.33"
 
