--- a/config/generate/confirm/aroon_osci.yaml
+++ b/config/generate/confirm/aroon_osci.yaml
@@ -1,7 +1,7 @@
 ---
 name: Aroon_Osci
 name_indi: Aroon_oscillator_1.7
-indi_type: SingleLineColorChange
+indi_type: ColorChange
 inputs:
 # input ENUM_TIMEFRAMES TimeFrame       = PERIOD_CURRENT; // Time frame
   - - Int
