--- a/config/generate/confirm/qwma.yaml
+++ b/config/generate/confirm/qwma.yaml
@@ -1,7 +1,7 @@
 ---
 name: QWMA
 name_indi: QWMA_ca
-indi_type: SingleLineColorChange
+indi_type: ColorChange
 inputs:
 
 # input ENUM_TIMEFRAMES TimeFrame        = PERIOD_CURRENT; // Time frame
