--- a/config/generate/baseline/gma.yaml
+++ b/config/generate/baseline/gma.yaml
@@ -1,19 +1,19 @@
 ---
-name: YMA
+name: GMA
 name_indi: YGMA
 # use YMA and GMA from the same indi
-indi_type: OnChart
+indi_type: PriceCross
 inputs:
-    # YMA
+# YMA
+  - - Int
+    - - -1.0
+# GMA
   - - Int
     - - 21.0
       - 9.0
       - 35.0
       - 2.0
-# GMA
-  - - Int
-    - - -1.0
 buffers:
-  - 0
+  - 1
 shift: 0
 
