--- a/config/generate/baseline/qwma_baseline.yaml
+++ b/config/generate/baseline/qwma_baseline.yaml
@@ -1,7 +1,7 @@
 ---
 name: QWMA_baseline
 name_indi: QWMA_ca
-indi_type: OnChart
+indi_type: PriceCross
 inputs:
 
 # input ENUM_TIMEFRAMES TimeFrame        = PERIOD_CURRENT; // Time frame
