--- a/config/generate/confirm/alf2.yaml
+++ b/config/generate/confirm/alf2.yaml
@@ -1,9 +1,8 @@
 ---
-name: EO
-name_indi: Elliot_oscillator
-indi_type: SingleLineColorChange
+name: ALF2
+name_indi: Adaptive_Laguerre_filter_2
+indi_type: ColorChange
 inputs:
-
 # input ENUM_TIMEFRAMES TimeFrame       = PERIOD_CURRENT; // Time frame
   - - Int
     - - 0.0  # current
@@ -12,35 +11,23 @@ inputs:
       - 19.0 # D1
       # - 21.0 # MN1
       - 2.0    # 5m 10m 15m 30m 2h 4h 8h 1D
-# input int             FastPeriod      = 5;              // Fast period
-  - - Int
-    - - 5.0
-      - 3.0
-      - 20.0
+# input double          LaggPeriod      = 10;             // Laguerre period
+  - - Double
+    - - 10.0
+      - 4.0
+      - 24.0
       - 2.0
-# input int             SlowPeriod      = 34;             // Slow period
-  - - Int
-    - - 34.0
-      - 22.0
-      - 46.0
-      - 2.0
-# input enMaTypes       MaMethod        = ma_sma;         // Average method
-  - - Int
-    - - 0.0
-      - 0.0
-      - 3.0
-      - 1.0
+# input double          LaggSmooth      = 0.5;            // Laguerre "smooth"
+  - - Double
+    - - 0.5
+      - 0.1
+      - 1.5
+      - 0.2
 # input enPrices        Price           = pr_median;      // Price
   - - Int
     - - 0.0
       - 0.0
       - 21.0
-      - 1.0
-# input enColorOn       ColorOn         = cc_onLevel;     // Color change
-  - - Int
-    - - 0.0
-      - 0.0
-      - 2.0
       - 1.0
 # input bool            AlertsOn        = false;          // Turn alerts on?
 # input bool            AlertsOnCurrent = true;           // Alert on current bar?
@@ -50,15 +37,10 @@ inputs:
 # input bool            AlertsNotify    = false;          // Send push notification on alerts?
 # input bool            Interpolate     = true;           // Interpolate mtf data ?
 buffers:
-       # SetIndexBuffer(0,fill1  ,INDICATOR_DATA);
-   # SetIndexBuffer(1,fill2  ,INDICATOR_DATA);
-   # SetIndexBuffer(2,levelUp,INDICATOR_DATA);
-   # SetIndexBuffer(3,levelMi,INDICATOR_DATA);
-   # SetIndexBuffer(4,levelDn,INDICATOR_DATA);
-   # SetIndexBuffer(5,val    ,INDICATOR_DATA);
-   # SetIndexBuffer(6,valc   ,INDICATOR_COLOR_INDEX);
-   # SetIndexBuffer(7,count  ,INDICATOR_CALCULATIONS);
-  - 6
+# SetIndexBuffer(0,lagg1 ,INDICATOR_DATA);
+# SetIndexBuffer(1,lagg1c,INDICATOR_COLOR_INDEX);
+# SetIndexBuffer(2,count ,INDICATOR_CALCULATIONS);
+  - 1
 colors:
   - 0
   - 1
