--- a/config/generate/confirm/corr_momentum_orig_val.yaml
+++ b/config/generate/confirm/corr_momentum_orig_val.yaml
@@ -1,7 +1,7 @@
 ---
 name: Corr_momentum_orig_val
 name_indi: Corr_momentum
-indi_type: SingleLineColorChange
+indi_type: ColorChange
 inputs:
 # input int        MomPeriod        = 32;          // Momentum period
   - - Int
