--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,10 +27,15 @@ serde_any = { version = "0.5", default-features = false, features = ["json", "ya
 
 anyhow = "1.0"
 
-# heim = "0.0.8"
-# heim-common = "0.0.8"
-# heim-process = "0.0.8"
-# heim-derive = "0.0.8"
+diesel = { version = "1.4", features = ["postgres", "numeric", "chrono", "uuidv07"] }
+dotenv = "0.15"
+diesel-derive-enum = { version = "0.4", features = ["postgres"] }
+bigdecimal = { version ="0.1", features = ["serde"] }
+uuid = { version = "0.8", default-features = false }
+
+glob = "0.3"
+rand = "0.7"
+rand_distr = "0.2"
 
 futures = "0.3"
 futures-executor = "0.3"
@@ -43,3 +48,7 @@ actix-rt = "1.0"
 awc = "1.0"
 bytes = "0.5"
 
+# heim = "0.0.8"
+# heim-common = "0.0.8"
+# heim-process = "0.0.8"
+# heim-derive = "0.0.8"
