--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ serde_repr = "0.1"
 serde_any = { version = "0.5", default-features = false, features = ["json", "yaml"] }
 
 anyhow = "1.0"
+derive_more = "0.99"
 
 diesel = { version = "1.4", features = ["postgres", "numeric", "chrono", "uuidv07"] }
 dotenv = "0.15"
