--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ anyhow = "1.0"
 
 bigdecimal = { version ="0.1", features = ["serde"] }
 glob = "0.3"
+derive_more = '*'
 
 futures = "0.3"
 futures-executor = "0.3"
