add filename to indicator struct
writes filename if class != Preset

--- a/config/generate/baseline/adxvma_baseline.yaml
+++ b/config/generate/baseline/adxvma_baseline.yaml
@@ -1,16 +1,14 @@
 ---
 name: Adxvma_baseline
-name_indi: adxvma_1_1
-indi_type: PriceCross
+filename: adxvma_1_1
+class: PriceCross
 inputs:
     # input int      AdxVmaPeriod = 14;       // Calculation period
-  - - Int
     - - 14.0
       - 4.0
       - 20.0
       - 2.0
 # input enPrices        Price           = pr_median;      // Price
-  - - Int
     - - 0.0
       - 0.0
       - 21.0
