--- a/config/generate/baseline/gma.yaml
+++ b/config/generate/baseline/gma.yaml
@@ -1,8 +1,8 @@
 ---
 name: GMA
-name_indi: YGMA
+filename: YGMA
 # use YMA and GMA from the same indi
-indi_type: PriceCross
+class: PriceCross
 inputs:
 # YMA
   - - Int
