--- a/config/generate/confirm/eo.yaml
+++ b/config/generate/confirm/eo.yaml
@@ -1,7 +1,7 @@
 ---
 name: EO
-name_indi: Elliot_oscillator
-indi_type: ColorChange
+filename: Elliot_oscillator
+class: ColorChange
 inputs:
 
 # input ENUM_TIMEFRAMES TimeFrame       = PERIOD_CURRENT; // Time frame
@@ -59,7 +59,7 @@ buffers:
    # SetIndexBuffer(6,valc   ,INDICATOR_COLOR_INDEX);
    # SetIndexBuffer(7,count  ,INDICATOR_CALCULATIONS);
   - 6
-colors:
+params:
   - 0
   - 1
   - 2
