--- a/config/generate/confirm/aroon_osci_zero_line.yaml
+++ b/config/generate/confirm/aroon_osci_zero_line.yaml
@@ -1,7 +1,7 @@
 ---
 name: Aroon_Osci_Zero
-name_indi: Aroon_oscillator_1.7
-indi_type: ZeroLineCross
+filename: Aroon_oscillator_1.7
+class: ZeroLineCross
 inputs:
 # input ENUM_TIMEFRAMES TimeFrame       = PERIOD_CURRENT; // Time frame
   - - Int
