--- a/config/generate/confirm/qwma.yaml
+++ b/config/generate/confirm/qwma.yaml
@@ -1,7 +1,7 @@
 ---
 name: QWMA
-name_indi: QWMA_ca
-indi_type: ColorChange
+filename: QWMA_ca
+class: ColorChange
 inputs:
 
 # input ENUM_TIMEFRAMES TimeFrame        = PERIOD_CURRENT; // Time frame
@@ -81,7 +81,7 @@ buffers:
    # SetIndexBuffer(5,qwmac,INDICATOR_COLOR_INDEX);
    # SetIndexBuffer(6,count,INDICATOR_CALCULATIONS);
   - 5 # COLOR_INDEX
-colors:
+params:
   - 0  # neutral
   - 1  # up
   - 2  # down
