--- a/config/generate/confirm/velocity_norm.yaml
+++ b/config/generate/confirm/velocity_norm.yaml
@@ -1,7 +1,7 @@
 ---
 name: Velocity_norm
-name_indi: Velocity_-_normalized
-indi_type: ColorChange
+filename: Velocity_-_normalized
+class: ColorChange
 inputs:
 # input ENUM_TIMEFRAMES TimeFrame       = PERIOD_CURRENT; // Time frame
   - - Int
@@ -63,7 +63,7 @@ inputs:
 
 buffers:
   - 6
-colors:
+params:
     - 0  # neutral
     - 1  # up
     - 2  # down
