--- a/config/indicator/confirm/chaikin.yaml
+++ b/config/indicator/confirm/chaikin.yaml
@@ -1,17 +1,32 @@
 ---
 name: Chaikin
-class: Preset
+filename: chaikin
+class: ZeroLineCross
 inputs:
-  - - 1.0
-    - 8.0
-    - 1.0
-  - - 5.0
-    - 18.0
-    - 1.0
-  - - 0.0
-    - 3.0
-    - 1.0
-  - - 0.0
-    - 1.0
-    - 1.0
+  ## XXX is included: IND_CHAIKIN
+
+# input int                  fast_ma_period=3;             // Schnelle Zeitraum
+    - - 3.0
+      - 1.0
+      - 8.0
+      - 1.0
+# input int                  slow_ma_period=10;            // Langsame Zeitraum
+    - - 10.0
+      - 5.0
+      - 18.0
+      - 1.0
+# input ENUM_MA_METHOD       ma_method=MODE_EMA;           // Art der Glättung
+    - - 1.0
+      - 0.0
+      - 3.0
+      - 1.0
+# input ENUM_APPLIED_VOLUME  applied_volume=VOLUME_TICK;   // Volumentyp
+# VOLUME_REAL
+    - - 1.0
+      - 0.0
+      - 1.0
+      - 1.0
+buffers:
+  - 0
 shift: 0
+
