--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,9 +10,9 @@ workdir: "/home/stefan/.wine/drive_c/Program Files/MetaTrader 5"
 # workdir: "C:\\Users\\stele\\AppData\\Roaming\\MetaQuotes\\Terminal\\D0E8209F77C8CF37AD8BF550E51FF075"
 reports: reports
 # expert with Windows-style "\"
-expert: "BacktestExpert\\nnfx-ea\\nnfx-ea.ex5"
+expert: "backtestd\\backtestd-expert.ex5"
 period: D1
-login: "7090"
+login: "19768"
 use_remote: true
 use_local: true
 replace_report: true
@@ -21,3 +21,5 @@ deposit: 100000
 currency: USD
 leverage: 500
 execution_mode: 0
+
+# jj2piqfv
