--- a/config/run_single.yaml
+++ b/config/run_single.yaml
@@ -1,23 +1,23 @@
 ---
 name: bt_run
 indi_set:
-  confirm: config/indicator/confirm/tct.yaml
-  confirm2: ~
-  confirm3: ~
-  exit: ~
-  cont: ~
-  baseline: ~
-  volume: ~
+  Confirm: config/indicator/confirm/ash.yaml
+  # Confirm2: ~
+  # Confirm3: ~
+  # Exit: ~
+  # Continue: ~
+  # Baseline: ~
+  # Volume: ~
 date:
-  - 2018-01-01T00:00:00-00:00
-  - 2019-12-11T00:00:00-00:00
+  - 2016-01-01T00:00:00-00:00
+  - 2019-12-31T00:00:00-00:00
 backtest_model: 2
     # EveryTick = 0,     // "Every tick"
     # OneMinuteOHLC = 1, // "1 minute OHLC"
     # OpenPrice = 2,     // "Open price only"
     # MathCalc = 3,      // "Math calculations"
     # EveryTickReal = 4, // "Every tick based on real ticks"
-optimize: 2
+optimize: 1
     # Disabled = 0,   // optimization disabled
     # Complete = 1,   // "Slow complete algorithm"
     # Genetic = 2,    // "Fast genetic based algorithm"
