--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,9 @@ chrono = { version = "0.4", features = ["serde"] }
 # tokio = "=0.2.0-alpha.6"
 
 quick-xml = "0.17"
-handlebars = "2.0"
+# handlebars = "2.0"
+
+csv = "1.1"
 
 serde = "1.0"
 serde_json = "1.0"
