--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ chrono = { version = "0.4", features = ["serde"] }
 # actix-web = "1.0"
 # tokio = "=0.2.0-alpha.6"
 
-quick-xml = "0.17"
+quick-xml = { version = "0.18", features = [ "serialize" ] }
 # handlebars = "2.0"
 
 csv = "1.1"
@@ -29,7 +29,8 @@ serde_any = { version = "0.5", default-features = false, features = ["json", "ya
 
 anyhow = "1.0"
 
-bigdecimal = { version ="0.1", features = ["serde"] }
+bigdecimal = { version = "0.1", features = ["serde"] }
+# num = { version = "0.2", features = ["bigint"]}
 glob = "0.3"
 derive_more = '*'
 
